examples/type_system/failing/102_missing_colon_function_param.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/102_missing_colon_function_param.flx
// error[E034]: Missing Type Annotation Colon
//
// Missing `:` in function parameter type annotation. Write it as `x: Type`.
//
//   examples/type_system/failing/102_missing_colon_function_param.flx:20:10
//    |
// 20 | fn add(x Int, y: Int) -> Int {
//    |          ^^^
//
// Hint:
//   Type annotations use `name: Type`.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E034

fn add(x Int, y: Int) -> Int {
    x + y
}
